# movenet-dance-demo

./: LICENSE  README.md  environment.yml  environment_m1.yml  inference.py  inference_demo.ipynb  live_demo.py  make_target_poses.ipynb  pyproject.toml  utils.py
data/: KeithNotationPhrase.mmdet_just_body.retracked.proofread.track0.movenet.mat  KeithNotationPhrase.mmdet_just_body.retracked.proofread.track0.movenet.slp  target_poses.yaml
