[project]
name = "movenet-dance-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "h5py>=3.11.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.8",
    "numpy<2",
    "opencv-python<4.9",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "tensorflow-hub>=0.12",
    # Platform-specific TensorFlow
    "tensorflow>=2.11,<2.20; sys_platform == 'linux'",
    "tensorflow-macos>=2.11; sys_platform == 'darwin'",
]

[project.optional-dependencies]
# GPU support for Apple Silicon
apple-gpu = [
    "tensorflow-metal>=0.3.0; sys_platform == 'darwin'",
]
# GPU support for Linux
cuda = [
    "tensorflow>=2.11,<2.20; sys_platform == 'linux'",
    "nvidia-cudnn-cu12; sys_platform == 'linux'",
]

[project.scripts]
live-demo = "live_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
